--- a/Chinese_Simplified.lng
+++ b/Chinese_Simplified.lng
@@ -1,8 +1,8 @@
-﻿2020-12-29 01:39
+﻿2021-12-28 01:40
 |~LANGUAGENAME|
 |简体中文|
 |~LANGUAGEVERSION|
-|1.34|
+|1.40|
 |~LANGUAGEAUTHOR|
 |Leo Dou @ CCF|
 |~LANGUAGEAUTHOREMAIL|
@@ -1385,3 +1385,9 @@
 |应用下列的选项来进入主窗口的剪贴板命令（如‘复制用户名’和‘复制密码’）|
 |Consider similar dashes as identical|
 |将相似的连接符视为相同|
+|Your data will be stored in a KeePass database file, which is a regular file. When saving for the first time, you will be prompted to specify the location where KeePass should save this file.|
+|你的数据将会被保存到一个 KeePass 数据库文件，这是一个常规的文件。第一次保存时，会提示你指定该文件的保存位置。|
+|It is important that you remember where the database file is stored.|
+|记住数据库文件的保存位置非常重要。|
+|You should regularly create a backup of the database file (onto an independent data storage device).|
+|建议你定期创建数据库文件的备份（到独立的数据存储设备）。|
