--- a/Chinese_Traditional.lng
+++ b/Chinese_Traditional.lng
@@ -1,7 +1,7 @@
 |~LANGUAGENAME|
 |繁體中文(臺灣)|
 |~LANGUAGEVERSION|
-|1.39 - 1|
+|1.40 - 1|
 |~LANGUAGEAUTHOR|
 |高祥元 (Kao Shiang-Yuan)|
 |~LANGUAGEAUTHOREMAIL|
@@ -1366,6 +1366,12 @@
 |開啟資料夾(&F)|
 |Consider similar dashes as identical|
 |將相似的連字號視為相同|
+|It is important that you remember where the database file is stored.|
+|重要：請記得這個資料庫檔案儲存的位置。|
+|You should regularly create a backup of the database file (onto an independent data storage device).|
+|您應該定期備份資料庫檔案(備份到獨立的資料儲存裝置)。|
+|Your data will be stored in a KeePass database file, which is a regular file. When saving for the first time, you will be prompted to specify the location where KeePass should save this file.|
+|您的資料將儲存在KeePass資料庫檔案。在第一次儲存檔案時，KeePass將詢問存檔位置。|
 |~LANGISO6391CODE|
 |zh|
 |About KeePass|
